--- a/saas_app/requirements.txt
+++ b/saas_app/requirements.txt
@@ -13,7 +13,7 @@ psycopg2-binary==2.9.9
 python-dotenv==0.21.1
 sqlparse==0.4.4
 django-allauth==0.59.0
-PyYaml==5.3.1 # need to pin down the PyYaml version since the newest version is currently broken - https://github.com/yaml/pyyaml/issues/724
+PyYaml==6.0.1 # pin it to version 6.0.1, avoid 6.0.0, 5.4.0 and 5.4.1
 django-bootstrap-form
 django-crispy-forms
 crispy-bootstrap5
