--- a/saas_app/requirements.txt
+++ b/saas_app/requirements.txt
@@ -1,23 +1,23 @@
-asgiref==3.7.2
-aws-sns-message-validator==0.0.5
-azure-identity==1.15.0
-azure-monitor-query==1.2.1
-awscli==1.32.108
-boto3==1.34.108
-Django==4.2.13
-django-crontab==0.7.1
+asgiref
+aws-sns-message-validator
+azure-identity
+azure-monitor-query
+awscli
+boto3
+Django
+django-crontab
 django-phonenumber-field
-gunicorn==22.0.0
+gunicorn
 phonenumbers
-psycopg2-binary==2.9.9
-python-dotenv==0.21.1
-sqlparse==0.5.0
-django-allauth==0.54.0
+psycopg2-binary
+python-dotenv
+sqlparse
+django-allauth
 PyYaml==6.0.1 # pin it to version 6.0.1, avoid 6.0.0, 5.4.0 and 5.4.1
 django-bootstrap-form
 django-crispy-forms
 crispy-bootstrap5
-notifications-python-client==8.2.0
-pandas==2.0.3
+notifications-python-client
+pandas
 reportlab
-whitenoise==6.6.0
+whitenoise
