--- a/saas_app/requirements_dev.txt
+++ b/saas_app/requirements_dev.txt
@@ -1,38 +1,38 @@
-asgiref==3.7.2
-attrs==22.2.0
-black==23.12.1
-certifi==2023.11.17
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-coverage==7.4.4
-cryptography==42.0.7
-defusedxml==0.7.1
-Django==4.2.13
-django-allauth==0.59.0
-django-bootstrap-form==3.4
-exceptiongroup==1.2.1
-flake8==6.1.0
-gunicorn==22.0.0
-idna==3.7
-iniconfig==2.0.0
-mccabe==0.7.0
-mypy-extensions==1.0.0
-oauthlib==3.2.2
-packaging==23.2
-pathspec==0.12.1
-platformdirs==2.6.2
-pluggy==1.3.0
-psycopg2-binary==2.9.9
-pycodestyle==2.11.1
-pycparser==2.21
-pyflakes==3.1.0
-PyJWT==2.8.0
-pytest==7.4.4
-python-dotenv==0.21.1
-python3-openid==3.2.0
-requests==2.32.0
-requests-oauthlib==1.3.1
-sqlparse==0.5.0
-tomli==2.0.1
-urllib3==1.26.18
+asgiref
+attrs
+black
+certifi
+cffi
+charset-normalizer
+click
+coverage
+cryptography
+defusedxml
+Django
+django-allauth
+django-bootstrap-form
+exceptiongroup
+flake8
+gunicorn
+idna
+iniconfig
+mccabe
+mypy-extensions
+oauthlib
+packaging
+pathspec
+platformdirs
+pluggy
+psycopg2-binary
+pycodestyle
+pycparser
+pyflakes
+PyJWT
+pytest
+python-dotenv
+python3-openid
+requests
+requests-oauthlib
+sqlparse
+tomli
+urllib3
