🥾 Bootstrap Terraform/Terragrunt for saas-procurement 👢

--- a/terragrunt/.checkov.yml
+++ b/terragrunt/.checkov.yml
@@ -1,14 +1,2 @@
 skip-check:
-  - CKV2_AWS_5  # Security Groups: False positive, this is attached to a resource
-  - CKV_AWS_23  # RDS: False positive. The RDS security group has a description
-  - CKV2_AWS_30 # RDS: Query logging enabling: TODO 
-  - CKV2_AWS_38 # Route53: DNS Secruity Extensions (DNSSEC) signing not required 
-  - CKV2_AWS_39 # Route53: False positive, we have DNS query logging but checkov cant see it
-  - CKV_AWS_51  # ECR: mutable images is acceptable since the latest tag will be used
-  - CKV_AWS_91 # LB: Access logging on ELB :TO DO
-  - CKV_AWS_23 # LB: False positive, the security group already has a description
-  - CKV2_AWS_28 # LB: Secure with WAF since public facing: TO DO 
-  - CKV_AWS_103 # LB: False negative, the load balancer is using TLS 1.2 
-  - CKV_AWS_136 # ECR encryption with default KMS key is acceptable
-  - CKV_AWS_158 # CloudWatch log group encryption with default KMS key is acceptable
-  - CKV_AWS_275 # IAM: Administrator policy is allowed
+    # Format is in the form of <check_id> # <reason>
