--- a/terragrunt/Makefile
+++ b/terragrunt/Makefile
@@ -1,21 +1,7 @@
-.PHONY: fmt checkov install lint test fmt-ci lint-ci build install-dev
+.PHONY: fmt checkov
 fmt:
 	terraform fmt -recursive aws &&\
 	terragrunt hclfmt
 
 checkov:
 	checkov --directory=aws
-
-build: ;
-
-install: ;
-
-install-dev: ;
-
-lint: ;
-
-lint-ci: ;
-
-test: ;
-
-fmt-ci: ;
